tests/transpiler/x/hs/outer_join.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/outer_join.hs:31:9: error:
    parse error on input ‘if’
   |
31 |         if row.customer then do
   |         ^^
